refactor: migrate from psycopg2 to SQLAlchemy to eliminate pandas SQLAlchemy warnings

--- a/data_exploration.ipynb
+++ b/data_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "9e236dff",
    "metadata": {},
    "outputs": [
@@ -10,65 +10,66 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Connected to database successfully!\n"
+      "✓ Connected to database successfully!\n",
+      "Database: PostgreSQL 14.17 on x86_64-pc-linux-musl\n"
      ]
     }
    ],
    "source": [
     "# Dependencies\n",
-    "import psycopg2\n",
     "import pandas as pd\n",
-    "from datetime import datetime\n",
+    "from datetime import datetime, timedelta\n",
+    "from sqlalchemy import create_engine, text\n",
     "\n",
-    "# Database credentials\n",
-    "DB_CONFIG = {\n",
-    "    'host': 'localhost',\n",
-    "    'port': 5432,\n",
-    "    'database': 'adimalara',\n",
-    "    'user': 'postgres',\n",
-    "    'password': 'changeme-strong-pass'\n",
-    "}\n",
+    "# Database connection string\n",
+    "DB_URL = \"postgresql://postgres:changeme-strong-pass@localhost:5432/adimalara\"\n",
     "\n",
-    "# Connect to database\n",
-    "conn = psycopg2.connect(**DB_CONFIG)\n",
-    "print(\"Connected to database successfully!\")"
+    "# Create SQLAlchemy engine\n",
+    "engine = create_engine(DB_URL)\n",
+    "\n",
+    "# Test connection\n",
+    "try:\n",
+    "    with engine.connect() as conn:\n",
+    "        result = conn.execute(text(\"SELECT version();\"))\n",
+    "        version = result.fetchone()[0]\n",
+    "        print(\"✓ Connected to database successfully!\")\n",
+    "        print(f\"Database: {version.split(',')[0]}\")\n",
+    "except Exception as e:\n",
+    "    print(f\"✗ Connection failed: {e}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "638f57ee",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_23304/4184853877.py:15: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  data_range = pd.read_sql_query(discovery_info_query, conn)\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "=== DATABASE RANGE ===\n",
+      "=== DATABASE OVERVIEW ===\n",
+      "Total records: 32,448,126\n",
+      "Unique vessels: 1,065\n",
       "Time: 2024-08-02 12:17:49.241000+00:00 to 2025-03-31 06:01:36.822000+00:00\n",
       "Lat: [59.93, 61.19]\n",
       "Lon: [5.01, 6.15]\n",
       "\n",
       "=== QUERY PARAMETERS ===\n",
       "Time: 2024-11-23 to 2024-12-07 (14 days)\n",
-      "Area: Lat [60.435, 60.685], Lon [5.466, 5.695]\n",
-      "Vessels: 30\n"
+      "Area: Lat [59.935, 61.186], Lon [5.009, 6.152]\n",
+      "Target vessels: 30\n",
+      "\n",
+      "✓ Records in query window: 1,592,806\n"
      ]
     }
    ],
    "source": [
     "from datetime import datetime, timedelta\n",
+    "from sqlalchemy import text\n",
     "\n",
-    "# ===== DISCOVER DATA RANGE =====\n",
-    "discovery_info_query = \"\"\"\n",
+    "# DISCOVER DATA RANGE\n",
+    "discovery_info_query = text(\"\"\"\n",
     "    SELECT \n",
     "        MIN(timestamp) as earliest,\n",
     "        MAX(timestamp) as latest,\n",
@@ -79,22 +80,22 @@
     "        COUNT(*) as total_records,\n",
     "        COUNT(DISTINCT mmsi) as unique_vessels\n",
     "    FROM ais1_position\n",
-    "\"\"\"\n",
+    "\"\"\")\n",
     "\n",
-    "data_range = pd.read_sql_query(discovery_info_query, conn)\n",
+    "data_range = pd.read_sql_query(discovery_info_query, engine)\n",
     "\n",
     "# Verify data exists\n",
     "if data_range.empty or data_range['earliest'][0] is None:\n",
     "    raise ValueError(\"No data in database!\")\n",
     "\n",
-    "print(\"=== DATABASE OVERVIEW ===\")\n",
+    "print(\"DATABASE OVERVIEW \")\n",
     "print(f\"Total records: {data_range['total_records'][0]:,}\")\n",
     "print(f\"Unique vessels: {data_range['unique_vessels'][0]:,}\")\n",
     "print(f\"Time: {data_range['earliest'][0]} to {data_range['latest'][0]}\")\n",
     "print(f\"Lat: [{data_range['min_lat'][0]:.2f}, {data_range['max_lat'][0]:.2f}]\")\n",
     "print(f\"Lon: [{data_range['min_lon'][0]:.2f}, {data_range['max_lon'][0]:.2f}]\")\n",
     "\n",
-    "# ===== CALCULATE TIME WINDOW =====\n",
+    "# CALCULATE TIME WINDOW \n",
     "earliest = data_range['earliest'][0]\n",
     "latest = data_range['latest'][0]\n",
     "total_days = (latest - earliest).days\n",
@@ -104,7 +105,7 @@
     "START_TIME = middle_date - timedelta(days=7)\n",
     "END_TIME = middle_date + timedelta(days=7)\n",
     "\n",
-    "# ===== USE FULL GEOGRAPHIC AREA =====\n",
+    "# USE FULL GEOGRAPHIC AREA \n",
     "# Convert to Python float (fixes numpy type error)\n",
     "LAT_MIN = float(data_range['min_lat'][0])\n",
     "LAT_MAX = float(data_range['max_lat'][0])\n",
@@ -113,27 +114,36 @@
     "\n",
     "NUM_VESSELS = 30\n",
     "\n",
-    "print(\"\\n=== QUERY PARAMETERS ===\")\n",
+    "print(\"\\n QUERY PARAMETERS \")\n",
     "print(f\"Time: {START_TIME.date()} to {END_TIME.date()} ({(END_TIME - START_TIME).days} days)\")\n",
     "print(f\"Area: Lat [{LAT_MIN:.3f}, {LAT_MAX:.3f}], Lon [{LON_MIN:.3f}, {LON_MAX:.3f}]\")\n",
     "print(f\"Target vessels: {NUM_VESSELS}\")\n",
     "\n",
-    "# ===== VERIFY DATA IN QUERY WINDOW =====\n",
-    "verify_query = \"\"\"\n",
+    "# VERIFY DATA IN QUERY WINDOW \n",
+    "verify_query = text(\"\"\"\n",
     "    SELECT COUNT(*) as count\n",
     "    FROM ais1_position\n",
-    "    WHERE timestamp BETWEEN %s AND %s\n",
-    "      AND latitude BETWEEN %s AND %s\n",
-    "      AND longitude BETWEEN %s AND %s\n",
-    "\"\"\"\n",
-    "verify_params = [START_TIME, END_TIME, LAT_MIN, LAT_MAX, LON_MIN, LON_MAX]\n",
-    "verify_result = pd.read_sql_query(verify_query, conn, params=verify_params)\n",
+    "    WHERE timestamp BETWEEN :start_time AND :end_time\n",
+    "      AND latitude BETWEEN :lat_min AND :lat_max\n",
+    "      AND longitude BETWEEN :lon_min AND :lon_max\n",
+    "\"\"\")\n",
+    "\n",
+    "verify_params = {\n",
+    "    'start_time': START_TIME,\n",
+    "    'end_time': END_TIME,\n",
+    "    'lat_min': LAT_MIN,\n",
+    "    'lat_max': LAT_MAX,\n",
+    "    'lon_min': LON_MIN,\n",
+    "    'lon_max': LON_MAX\n",
+    "}\n",
+    "\n",
+    "verify_result = pd.read_sql_query(verify_query, engine, params=verify_params)\n",
     "print(f\"\\n✓ Records in query window: {verify_result['count'][0]:,}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "0e0d4631",
    "metadata": {},
    "outputs": [
@@ -142,51 +152,52 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Found 0 vessels\n",
-      "Total records: 0\n",
+      "✓ Found 30 vessels\n",
+      "Total records: 1,327,687\n",
+      "Avg records per vessel: 44256\n",
       "\n",
       "Top 5 most active:\n",
-      "Empty DataFrame\n",
-      "Columns: [mmsi, record_count]\n",
-      "Index: []\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_23304/782305164.py:26: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  vessels_df = pd.read_sql_query(discovery_query, conn, params=discovery_params)\n"
+      "        mmsi  record_count\n",
+      "0  257949600        144916\n",
+      "1  258221500        131561\n",
+      "2  257914900        114774\n",
+      "3  257642000         92390\n",
+      "4  257004700         91927\n"
      ]
     }
    ],
    "source": [
-    "# STEP 1: Find most active vessels in this area/time \n",
-    "discovery_query = \"\"\"\n",
+    "from sqlalchemy import text\n",
+    "\n",
+    "#  Find most active vessels in this area/time\n",
+    "discovery_query = text(\"\"\"\n",
     "    SELECT \n",
     "        mmsi,\n",
     "        COUNT(*) as record_count,\n",
     "        MIN(timestamp) as first_seen,\n",
     "        MAX(timestamp) as last_seen\n",
     "    FROM ais1_position\n",
-    "    WHERE timestamp BETWEEN %s AND %s\n",
-    "      AND latitude BETWEEN %s AND %s\n",
-    "      AND longitude BETWEEN %s AND %s\n",
+    "    WHERE timestamp BETWEEN :start_time AND :end_time\n",
+    "      AND latitude BETWEEN :lat_min AND :lat_max\n",
+    "      AND longitude BETWEEN :lon_min AND :lon_max\n",
     "    GROUP BY mmsi\n",
     "    HAVING COUNT(*) > 50\n",
     "    ORDER BY record_count DESC\n",
-    "    LIMIT %s\n",
-    "\"\"\"\n",
+    "    LIMIT :num_vessels\n",
+    "\"\"\")\n",
     "\n",
-    "discovery_params = [\n",
-    "    START_TIME, END_TIME,\n",
-    "    LAT_MIN, LAT_MAX,\n",
-    "    LON_MIN, LON_MAX,\n",
-    "    NUM_VESSELS\n",
-    "]\n",
+    "discovery_params = {\n",
+    "    'start_time': START_TIME,\n",
+    "    'end_time': END_TIME,\n",
+    "    'lat_min': LAT_MIN,\n",
+    "    'lat_max': LAT_MAX,\n",
+    "    'lon_min': LON_MIN,\n",
+    "    'lon_max': LON_MAX,\n",
+    "    'num_vessels': NUM_VESSELS\n",
+    "}\n",
     "\n",
     "# Get vessel list\n",
-    "vessels_df = pd.read_sql_query(discovery_query, conn, params=discovery_params)\n",
+    "vessels_df = pd.read_sql_query(discovery_query, engine, params=discovery_params)\n",
     "\n",
     "print(f\"\\n✓ Found {len(vessels_df)} vessels\")\n",
     "if len(vessels_df) > 0:\n",
